--- a/style.css
+++ b/style.css
@@ -2,38 +2,59 @@ body {
     font-family: sans-serif;
 }
 
+
+header {
+    background-color:#0776A0 ;
+   
+}
+header img {
+    margin:20px 15px 20px 15px;
+}
 h1{
- text-align: center;   
+    text-align: center;
+    font-size: 48px;
 }
 
- nav { 
-text-align: center;
-margin-bottom: 40px;
-font-size: 20px;
-}
-a {
-  margin: 70px;
-  color:black;
-}
-
-main p{
-border: 2px solid black;  
-border-radius: 10px;  
-padding: 10px;
-margin: 10px 30px 40px 30px;
+h2{
+    font-size: 36px;
+    color: #FF2C00;
+    margin-left: 42px;
 }
 
 main img {
-  text-align: center;
-  margin: 10px 50px 40px 50px;
-  border-left: 10px dotted black;
-}
-p {
-  border: 8px solid black;
-  margin: 0px;
+    margin: 30px;
+    text-align: center;
 }
 
-  
-  
 
 
+
+.line {
+    border-top: 5px solid black ;
+}
+
+footer{
+    background-color: #024C68;
+    color: white;
+    font-size: 24px;}
+    footer p {
+
+margin: 36px 79px 36px 79px;
+    
+}
+a {
+    font-size: 36px;
+    background-color: #FFB600;
+    color: #000000;
+    text-decoration: none;
+    border-radius: 10px;
+    margin-bottom: 35px 0px 35px 0px ;
+    padding: 2px;
+    
+
+}
+ul {
+    list-style: url("https://learn.logikaschool.com/uploads/2021/01/Arrow%201_0_1611261359.svg");
+    font-size: 24px;
+    margin-left: 42px;
+}
